fix page breaks on print

--- a/frontend/src/styles/CardNursingHome.scss
+++ b/frontend/src/styles/CardNursingHome.scss
@@ -20,6 +20,7 @@
 
 	@media print {
 			flex-direction: row;
+			page-break-inside: avoid;
 	}
 }
 
